Move diskless compaction publication into Ursa